# sheetreader-duckdb

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  community-pr.md  extension_config.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: MainDistributionPipeline.yml  ReleasePipeline.yml  _check_secrets.yml  _extension_deploy.yml
benchmarks/: benchmark.ipynb  tpch_customer_sf_10_results.csv  tpch_customer_sf_1_results.csv  tpch_customer_sf_6_results.csv  tpch_orders_sf_1_results.csv
docker-demo/: Dockerfile  README.md  demo.sql  demo_community.sql  demo_release.sql  demo_source.sql  docker-compose.yml  test.xlsx  test_verification.sql  todo.md
src/: sheetreader_extension.cpp
src/include/: sheetreader_extension.hpp
src/include/sheetreader/: XlsxFile.h  XlsxSheet.cpp  XlsxSheet.h
src/include/sheetreader/src/: XlsxFile.cpp  parsing.h
src/include/sheetreader/src/miniz/: miniz.h
test/sql/: sheetreader.test
